Adicionando comandos em HTML

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+#primeiro repositório
+Para copiar o código em HTML:
 <html>
-  <h1> primeiro arquivo em HTML <h1>
+<h1> primeiro arquivo em HTML <h1>
 </html>
